model manager, homepage news filled

--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
                             <a class="nav-link text-body small" href="#">Reklama</a>
                         </li>
                         <li class="nav-item border-right border-secondary">
-                            <a class="nav-link text-body small" href="#">KOntakt</a>
+                            <a class="nav-link text-body small" href="#">Kontakt</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-body small" href="#">Tizimga kirish</a>
