--- a/templates/base.html
+++ b/templates/base.html
@@ -40,7 +40,7 @@
                             <a class="nav-link text-body small" href="#">Reklama</a>
                         </li>
                         <li class="nav-item border-right border-secondary">
-                            <a class="nav-link text-body small" href="#">Kontakt</a>
+                            <a class="nav-link text-body small" href="{% url "contact" %}">Kontakt</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-body small" href="#">Tizimga kirish</a>
@@ -107,7 +107,7 @@
                             {% endfor %}
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Kontakt</a>
+                    <a href="{% url "contact" %}" class="nav-item nav-link">Kontakt</a>
                 </div>
                 <div class="input-group ml-auto d-none d-lg-flex" style="width: 100%; max-width: 300px;">
                     <input type="text" class="form-control border-0" placeholder="Qidiruv...">
