--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
                         <div class="overlay">
                             <div class="mb-2">
                                 <a class="badge badge-primary text-uppercase font-weight-semi-bold p-2 mr-2"
-                                    href="">{{new.category.name}}</a>
+                                    href="{% url "detail" new.slug %}">{{new.category.name}}</a>
                                 <a class="text-white" href="">{{new.publish_time}}</a>
                             </div>
                             <a class="h2 m-0 text-white text-uppercase font-weight-bold" href="">{{new.title}}</a>
@@ -114,7 +114,7 @@
                     <!-- Social Follow Start -->
                     <div class="mb-3">
                         <div class="section-title mb-0">
-                            <h4 class="m-0 text-uppercase font-weight-bold">Follow Us</h4>
+                            <h4 class="m-0 text-uppercase font-weight-bold">Bizni kuzating</h4>
                         </div>
                         <div class="bg-white border border-top-0 p-3">
                             <a href="" class="d-block w-100 text-white text-decoration-none mb-3" style="background: #39569E;">
