--- a/templates/index.html
+++ b/templates/index.html
@@ -37,7 +37,7 @@
                                         href="">{{new.category.name}}</a>
                                     <a class="text-white" href=""><small>{{new.publish_time}}</small></a>
                                 </div>
-                                <a class="h6 m-0 text-white text-uppercase font-weight-semi-bold" href="">{{new.title | truncatewords:5}}</a>
+                                <a class="h6 m-0 text-white text-uppercase font-weight-semi-bold" href="{% url "detail" new.slug %}">{{new.title | truncatewords:5}}</a>
                             </div>
                         </div>
                     </div>
@@ -59,7 +59,7 @@
                         <div class="owl-carousel tranding-carousel position-relative d-inline-flex align-items-center ml-3"
                             style="width: calc(100% - 170px); padding-right: 90px;">
                             {% for new in breaking_news %}
-                            <div class="text-truncate"><a class="text-white text-uppercase font-weight-semi-bold" href="">{{new.title | truncatewords:10}}</a></div>
+                            <div class="text-truncate"><a class="text-white text-uppercase font-weight-semi-bold" href="{% url "detail" new.slug %}">{{new.title | truncatewords:10}}</a></div>
                             {% endfor %}
                         </div>
                     </div>
@@ -92,7 +92,7 @@
                                             href="">{{new.category.name}}</a>
                                         <a class="text-body" href=""><small>{{new.publish_time}}</small></a>
                                     </div>
-                                    <a class="h5 d-block mb-0 text-secondary text-uppercase font-weight-bold" href="">{{new.title | truncatewords:5}}</a>
+                                    <a class="h5 d-block mb-0 text-secondary text-uppercase font-weight-bold" href="{% url "detail" new.slug %}">{{new.title | truncatewords:5}}</a>
                                 </div>
                                 <div class="d-flex justify-content-between bg-white border border-top-0 p-4">
                                     <div class="d-flex align-items-center">
