--- a/templates/base.html
+++ b/templates/base.html
@@ -109,13 +109,16 @@
                     </div>
                     <a href="{% url "contact" %}" class="nav-item nav-link">Kontakt</a>
                 </div>
+                <!-- Search box -->
+                <form method="GET" action="{% url "search_results" %}">
                 <div class="input-group ml-auto d-none d-lg-flex" style="width: 100%; max-width: 300px;">
-                    <input type="text" class="form-control border-0" placeholder="Qidiruv...">
+                    <input type="text" class="form-control border-0" placeholder="Qidiruv..." name='q'>
                     <div class="input-group-append">
                         <button class="input-group-text bg-primary text-dark border-0 px-3"><i
                                 class="fa fa-search"></i></button>
                     </div>
                 </div>
+                </form>
             </div>
         </nav>
     </div>
