--- a/templates/contact.html
+++ b/templates/contact.html
@@ -12,24 +12,25 @@
                     </div>
                     <div class="bg-white border border-top-0 p-4 mb-3">
                         <h6 class="text-uppercase font-weight-bold mb-3">Savollaringizni yo'llang</h6>
-                        <form>
+                        <form method="POST">
+                            {% csrf_token %}
                             <div class="form-row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <input type="text" class="form-control p-4" placeholder="Ismingiz..." required="required"/>
+                                        <input name="fullname" type="text" class="form-control p-4" placeholder="Ismingiz..." required="required"/>
                                     </div>
                                 </div>
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        <input type="email" class="form-control p-4" placeholder="Emailingiz..." required="required"/>
+                                        <input name="email" type="email" class="form-control p-4" placeholder="Emailingiz..." required="required"/>
                                     </div>
                                 </div>
                             </div>
                             <div class="form-group">
-                                <input type="text" class="form-control p-4" placeholder="Mavzu..." required="required"/>
+                                <input name="subject" type="text" class="form-control p-4" placeholder="Mavzu..." required="required"/>
                             </div>
                             <div class="form-group">
-                                <textarea class="form-control" rows="4" placeholder="Xabar..." required="required"></textarea>
+                                <textarea name="message" class="form-control" rows="4" placeholder="Xabar..." required="required"></textarea>
                             </div>
                             <div>
                                 <button class="btn btn-primary font-weight-semi-bold px-4" style="height: 50px;"
