Basic SignUp func. Works if you add correct credentials and creates is_active=False user. Have problems with field validation

--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,10 @@
                             <a class="nav-link text-body small" href="{% url "contact" %}">Kontakt</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-body small" href="#">Tizimga kirish</a>
+                            <a class="nav-link text-body small" href="#" style="color: white !important;">Tizimga kirish</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-body small" href="{% url "register" %}" style="color: white !important;">Ro'yxatdan o'tish</a>
                         </li>
                     </ul>
                 </nav>
